--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ presence:
   status: "online" # can be 'online', 'idle', 'dnd', or 'invisible'
 
 # Discord Channel and Refresh Time Configuration
-channel: "Put channel id here"
+channel: "1240289713395470346"
 refresh: 60 # How much time the bot will refresh the stats
 timeout: 1 # How much time to wait for a node to respond to the bot (if you change this, it will add more time to refresh the stats)
 
