--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 # If you need help, join our discord server here: https://discord.gg/zv6maQRah3
 
 # Bot Configuration
-token: "MTIxMjcxMjEyODUwMzQ4MDM0MQ.GVLsnh.zrhwtQMbjtTPeaMThl_64MiEe6WDnUndjU_RpU"
+token: process.env.TOKEN
 presence:
   text: "NixonNodes.com"
   type: "watching" # can be 'watching', 'playing', 'listening', or 'competing'. 'streaming' is not working for now
